# xByte

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md
.github/: dependabot.yml
.github/workflows/: ci-xbyte-client.yml  ci-xbyte-contracts.yml  ci-xbyte-server.yml
tunity-sdk/: package-lock.json  package.json  tsconfig.json
tunity-sdk/src/: index.ts
tunity-server/: Cargo.toml
tunity-server/crates/tunity-api/: Cargo.toml
tunity-server/crates/tunity-api/src/: db.rs  health.rs  lib.rs  player.rs  pricing.rs  server.rs  utils.rs  x402.rs
tunity-server/crates/tunity-app/: Cargo.toml
tunity-server/crates/tunity-app/src/: main.rs
tunity-web/: package-lock.json  package.json
tunity-web/app/: layout.tsx  page.tsx
tunity-web/app/publish/: page.tsx
tunity-web/components/app/: header.tsx  item.tsx
tunity-web/components/privy/: pay.tsx
tunity-web/components/publish/: form.tsx
tunity-web/components/track/: item.tsx  player.tsx
tunity-web/lib/: tunity-client.ts  utils.ts
tunity-web/types/: api.ts
xbyte-contracts/: foundry.toml
xbyte-contracts/script/: xByteFactory.s.sol
xbyte-contracts/src/: xByteFactory.sol  xByteRelay.sol  xByteVault.sol
xbyte-contracts/test/: xByteFactory.t.sol  xByteVault.t.sol
xbyte-server/: Cargo.toml
xbyte-server/crates/xbyte-api/: Cargo.toml
xbyte-server/crates/xbyte-api/src/: db.rs  health.rs  lib.rs  player.rs  pricing.rs  s3.rs  server.rs  utils.rs  x402.rs
xbyte-server/crates/xbyte-api/src/client/: api.rs  mod.rs  schema.rs
xbyte-server/crates/xbyte-api/src/s3/: api.rs  client.rs  mod.rs
xbyte-server/crates/xbyte-app/: Cargo.toml
xbyte-server/crates/xbyte-app/src/: main.rs
xbyte-server/crates/xbyte-evm/: Cargo.toml  README.md  contracts
xbyte-server/crates/xbyte-evm/src/: factory.rs  lib.rs  provider.rs  vault.rs
xbyte-web/: .oxfmtrc.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
xbyte-web/spotify-demo/: next.config.ts  package-lock.json  package.json  tsconfig.json
xbyte-web/spotify-demo/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
xbyte-web/spotify-demo/app/movie/: page.tsx
xbyte-web/spotify-demo/app/movie/[id]/: page.tsx
xbyte-web/spotify-demo/app/publish/: page.tsx
xbyte-web/spotify-demo/app/track/: page.tsx
xbyte-web/spotify-demo/app/track/[id]/: page.tsx
xbyte-web/spotify-demo/components/app/: header.tsx  theme.tsx
xbyte-web/spotify-demo/components/privy/: pay.tsx  provider.tsx
xbyte-web/spotify-demo/components/publish/: form.tsx
xbyte-web/spotify-demo/components/track/: item.tsx  player.tsx
xbyte-web/spotify-demo/components/ui/: button.tsx
xbyte-web/spotify-demo/lib/: data.ts  utils.ts
xbyte-web/tunity-sdk/: package-lock.json  package.json  tsconfig.json
xbyte-web/tunity-sdk/src/: index.ts
xbyte-web/xbyte-components/: .gitignore  components.json  package.json  tsconfig.json
xbyte-web/xbyte-components/components/: index.ts
xbyte-web/xbyte-components/components/app/: appFooter.tsx  appHeader.tsx  header.tsx
xbyte-web/xbyte-components/components/platform/: callToAction.tsx  contactBanner.tsx  faqAccordion.tsx  feature.tsx  infoCard.tsx  paragraph.tsx  paymentFlow.tsx  platformAnalytics.tsx  processSteps.tsx  progressStepper.tsx  sectionHeader.tsx  setupCharts.tsx
xbyte-web/xbyte-components/components/privy/: connect.tsx  profile.tsx  provider.tsx
xbyte-web/xbyte-components/components/track/: item.tsx  player.tsx
xbyte-web/xbyte-components/components/ui/: chart.tsx
xbyte-web/xbyte-components/hooks/: useXBytePrivy.ts
xbyte-web/xbyte-components/lib/: data.ts
xbyte-web/xbyte-components/styles/: globals.css
xbyte-web/xbyte-docs/: .gitignore  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json  vocs.config.ts
xbyte-web/xbyte-docs/blog/: authors.yml
xbyte-web/xbyte-docs/docs/: api-client.md  evm-client.md  examples.md  getting-started.md  intro.md  styles.css  types.md
xbyte-web/xbyte-docs/docs/pages/: api-client.mdx  evm-client.mdx  examples.mdx  getting-started.mdx  index.mdx  intro.mdx  types.mdx
xbyte-web/xbyte-docs/src/components/HomepageFeatures/: index.tsx
xbyte-web/xbyte-docs/src/css/: custom.css
xbyte-web/xbyte-docs/src/pages/: index.tsx
xbyte-web/xbyte-platform/: next.config.ts  og-image.tsx  package.json  tsconfig.json
xbyte-web/xbyte-platform/app/: error.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
xbyte-web/xbyte-platform/app/landing/: page.tsx
xbyte-web/xbyte-platform/app/payout/: layout.tsx  opengraph-image.tsx  page.tsx
xbyte-web/xbyte-platform/app/privacy/: opengraph-image.tsx  page.tsx
xbyte-web/xbyte-platform/app/setup/: layout.tsx  opengraph-image.tsx  page.tsx
xbyte-web/xbyte-platform/app/terms/: opengraph-image.tsx  page.tsx
xbyte-web/xbyte-platform/components/app/: appFooter.tsx  appHeader.tsx  appLegal.tsx  appLogo.tsx  appPage.tsx
xbyte-web/xbyte-platform/components/platform/: callToAction.tsx  feature.tsx  optionable.tsx
xbyte-web/xbyte-platform/components/privy/: connect.tsx  pay.tsx  provider.tsx
xbyte-web/xbyte-sdk/: LICENSE  README.md  package.json  tsconfig.json
xbyte-web/xbyte-sdk/src/: abi.ts  client.ts  contracts.ts  index.ts  types.ts
