[workspace]
resolver = "3"
members = ["crates/tunity-api", "crates/tunity-app"]

[workspace.dependencies]
# Local Crates
tunity_api = { path = "crates/tunity-api" }
tunity_app = { path = "crates/tunity-app" }

# Common dependencies
tokio = "1.42.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
base64 = "0.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# API dependencies
actix-web = { version = "4.12.1", features = ["rustls"] }
actix-cors = "0.7.1"

# x402 dependencies
openlibx402-core = "0.0.3"
openlibx402-actix = "0.0.3"
ureq = { version = "2.0.0", features = ["rustls", "json"] }
