[workspace]
resolver = "3"
members = ["crates/xbyte-api", "crates/xbyte-app"]

[workspace.dependencies]
# Local Crates
xbyte_api = { path = "crates/xbyte-api" }
xbyte_app = { path = "crates/xbyte-app" }

# Common dependencies
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
base64 = "0.22.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# API dependencies
actix-web = { version = "4.12.1", features = ["rustls"] }
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
url = "2.5.7"

# x402 dependencies
ureq = { version = "3.1.4", features = ["rustls", "json"] }
