[workspace]
resolver = "3"
members = ["crates/xbyte-api", "crates/xbyte-app", "crates/xbyte-evm"]

[workspace.dependencies]
# Local Crates
xbyte_api = { path = "crates/xbyte-api" }
xbyte_app = { path = "crates/xbyte-app" }
xbyte-evm = { path = "crates/xbyte-evm" }

# Common dependencies
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
anyhow = "1.0.100"
base64 = "0.22.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
alloy-primitives = { version = "1.5.2", features = ["serde"] }

# API dependencies
actix-web = { version = "4.12.1", features = ["rustls"] }
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
url = "2.5.7"

# AWS dependencies
aws-config = { version = "1.8.5", features = [
    "rustls",
    "behavior-version-latest",
] }
aws-sdk-s3 = { version = "1.119.0", features = ["behavior-version-latest"] }

# x402 dependencies
ureq = { version = "3.1.4", features = ["rustls", "json"] }
alloy-sol-types = "1.5.2"
alloy-contract = "1.2.1"
alloy-provider = "1.2.1"
