[workspace]
resolver = "3"
members = ["crates/xbyte-api", "crates/xbyte-app", "crates/xbyte-evm"]

[workspace.package]
authors = ["Arvin Moravej <moravej.arvin@gmail.com>"]
description = "xByte Infra - The pay-per-byte content monetization protocol."
homepage = "https://xbyte.sh/"
repository = "https://github.com/Arvmor/xbyte"
keywords = ["xbyte", "x402", "monetization", "web3", "blockchain"]
license = "MIT"

[workspace.dependencies]
# Local Crates
xbyte_api = { path = "crates/xbyte-api" }
xbyte_app = { path = "crates/xbyte-app" }
xbyte-evm = { path = "crates/xbyte-evm" }

# Common dependencies
dotenv = "0.15.0"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
base64 = "0.22.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# API dependencies
actix-web = { version = "4.12.1", features = ["rustls"] }
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
url = { version = "2.5.8", features = ["serde"] }

# AWS dependencies
aws-config = { version = "1.8.5", features = ["rustls", "behavior-version-latest"] }
aws-sdk-s3 = { version = "1.121.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.96.0", features = ["behavior-version-latest"] }

# x402 dependencies
ureq = { version = "3.1.4", features = ["rustls", "json"] }
alloy-sol-types = "1.5.2"
alloy-contract = "1.5.2"
alloy-provider = "1.5.2"
alloy-primitives = { version = "1.5.3", features = ["serde"] }
