[package]
name = "xbyte_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
base64.workspace = true
serde_json.workspace = true
ureq.workspace = true
url.workspace = true
actix-multipart.workspace = true
uuid.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
alloy-primitives.workspace = true