[package]
name = "xbyte_api"
version = "0.1.0"
edition = "2024"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
base64.workspace = true
serde_json.workspace = true
ureq.workspace = true
url.workspace = true
uuid.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
alloy-primitives.workspace = true
xbyte-evm.workspace = true

[dev-dependencies]
dotenv.workspace = true
