[package]
name = "xbyte-evm"
version = "0.1.1"
edition = "2024"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
alloy-sol-types.workspace = true
alloy-contract.workspace = true
alloy-provider.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio.workspace = true
